--- a/fm/src/app/operation/operation.component.scss
+++ b/fm/src/app/operation/operation.component.scss
@@ -90,6 +90,7 @@
   
   .card {
     border-radius: 10px; 
+    cursor: pointer;
   }
   
   h5.card-title {
@@ -98,7 +99,7 @@
   
   i.fa-solid {
     font-size: 24px; 
-    color: #6c757d;  
+    // color: #6c757d;  
   }
   
 
@@ -120,4 +121,115 @@
     color: inherit;
     text-decoration: none;
   }
-  
+
+  .bg{
+    cursor: pointer;
+  }
+
+  /* Icon Box Styling */
+/* Custom Background Colors */
+.bg-leave-tracker {
+ color: #46abd0 !important; /* DodgerBlue */
+ background-color:rgb(100 213 253 / 20%) ;
+}
+
+.bg-files {
+  color: #46acd0 !important; /* LightSeaGreen */
+  background-color:rgb(100 213 253 / 20%) ;
+}
+
+.bg-employee-info {
+  color: #f6ac0b !important; /* LimeGreen */
+  background-color:rgb(246 172 11 / 20%) ;
+}
+
+.bg-travel {
+color: #46acd0 !important; /* DarkOrange */
+background-color:rgb(100 213 253 / 20%) ;
+}
+
+.bg-tasks {
+  color: #e87347 !important; /* OrangeRed */
+  background-color:rgb(232 115 71 / 20%) ;
+}
+
+.bg-hr-letters {
+  color: #e87347 !important; /* SlateBlue */
+  background-color:rgb(232 115 71 / 20%) ;
+}
+
+.bg-general {
+  color: #f6ac0b !important; /* Brown */
+  background-color:rgb(246 172 11 / 20%) ;
+}
+
+.bg-approvals {
+  color: #f6ac0b !important; /* DarkTurquoise */
+  background-color:rgb(246 172 11 / 20%) ;
+}
+
+.bg-data-admin {
+  color: #cb3888 !important; /* SteelBlue */
+  background-color:rgb(203 56 136 / 20%) ;
+}
+
+/* Keep the existing icon-box styling */
+.icon-box {
+  width: 52px;
+  height: 52px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 21%;
+  margin: 0 auto -1px auto;
+  color: white;
+  font-size: 1.75rem;
+  cursor: pointer;
+}
+
+/* Common styles */
+.list-group-item {
+  border-radius: 8px;
+  padding: 15px;
+  transition: background-color 0.3s ease;
+}
+
+.list-group-item i {
+  font-size: 20px;
+}
+
+/* Different background and icon colors */
+.leave-item {
+  background-color: #f8f9fa; /* Light grey background */
+}
+
+.leave-item i {
+  color: #ff5733; /* Orange icon color */
+}
+
+
+
+.files-item i {
+  color: #00796b; /* Teal icon color */
+}
+
+
+
+.employee-item i {
+  color: #d81b60; /* Dark pink icon color */
+}
+
+
+
+.travel-item i {
+  color: #ff9800; /* Orange icon color */
+}
+
+
+
+.tasks-item i {
+  color: #388e3c; /* Dark green icon color */
+}
+
+/* Hover effects */
+
