--- a/fm/src/app/overview/overview.component.html
+++ b/fm/src/app/overview/overview.component.html
@@ -115,11 +115,11 @@
             Eker
           </p>
         </div>
-        <app-feeds class="card-body" *ngIf="selectedTab === 'feeds'"></app-feeds>
+        <div class="card-body" *ngIf="selectedTab === 'feeds'">1</div>
         <div class="card-body" *ngIf="selectedTab === 'profile'">2</div>
         <div class="card-body" *ngIf="selectedTab === 'approvals'">3</div>
         <div class="card-body" *ngIf="selectedTab === 'leave'">4</div>
-        <div class="card-body" *ngIf="selectedTab === 'shift'"><app-shift></app-shift></div>
+        <div class="card-body" *ngIf="selectedTab === 'shift'">5</div>
         <div class="card-body" *ngIf="selectedTab === 'files'">6</div>
       </div>
     </div>
