--- a/fm/src/app/app.component.html
+++ b/fm/src/app/app.component.html
@@ -50,13 +50,13 @@
       </div>
       <div class="link" (click)="newHireNavigate()" *ngIf="!showPopup" [ngClass]="{'active': activeLink === 'newHires'}">
         <div class="content">
-          <i class="fa-regular fa-handshake"></i>
+          <i class="fa-regular fa-id-card"></i>
           <div class="title-home">New Hires</div>
         </div>
       </div>
       <div class="link" (click)="detailsNavigate()" *ngIf="!showPopup" [ngClass]="{'active': activeLink === 'details'}">
         <div class="content">
-          <i class="fa-regular fa-handshake"></i>
+          <i class="fa-solid fa-folder-open"></i>
           
           <div class="title-home">Details</div>
         </div>
