--- a/fm/src/app/team-list/team-list.component.html
+++ b/fm/src/app/team-list/team-list.component.html
@@ -1,32 +1,21 @@
-<!-- employee-table.component.html -->
-<div class="body">
-    <div class="container-fluid">
-      <div class="header">
-        <div>
-          <select [(ngModel)]="reporteeFilter" (change)="filterReportees()">
-            <option value="Employee">Employee View</option>
-            <option value="Admin">Admin</option>
-            <option value="Manager">Manager</option>
-          </select>
-          <button>Edit</button>
-        </div>
-        <div class="right-buttons">
-          <button>View All Data</button>
-          <select [(ngModel)]="reporteeFilter">
-            <option value="Direct Reportees">Direct Reportees' Data</option>
-          </select>
-          <button><i class="fas fa-filter"></i></button>
-          <button><i class="fas fa-ellipsis-h"></i></button>
-        </div>
-      </div>
-  
-      <div class="table-container">
-        <table>
+<div class="team-card-container">
+  <div 
+    class="team-card"
+    *ngFor="let team of teams"
+    (click)="selectTeam(team)"
+    [class.active]="selectedTeam === team"
+  >
+    {{ team }}
+  </div>
+</div>
+
+<div *ngIf="selectedTeam" class="body">
+     <div class="table-container">
+        <table >
           <thead>
             <tr>
-              <th><input type="checkbox" /></th>
-              <th (click)="sortBy('employeeId')">Employee ID <i class="fas fa-sort"></i></th>
-              <th (click)="sortBy('firstName')">First Name <i class="fas fa-sort"></i></th>
+              <th>Employee ID <i class="fas fa-sort"></i></th>
+              <th >First Name <i class="fas fa-sort"></i></th>
               <th>Last Name</th>
               <th>Nick name</th>
               <th>Email address</th>
@@ -43,8 +32,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let employee of employees">
-              <td><input type="checkbox" /></td>
+            <tr *ngFor="let employee of filteredEmployees">
               <td>{{employee.employeeId}}</td>
               <td>{{employee.firstName}}</td>
               <td>{{employee.lastName}}</td>
